--- a/templates/base/sidebar.html
+++ b/templates/base/sidebar.html
@@ -1,4 +1,3 @@
-
 {% load static %}
 
 
@@ -10,48 +9,98 @@
         </div>
     </div>
     <ul id="sidebar_menu">
-       <li class="">
-            <a href="{% url 'admin_home' %}" aria-expanded="false">
+        <li class="">
+            <a class="has-arrow" href="#" aria-expanded="false">
                 <div class="icon_menu">
                     <img src="{% static 'img/menu-icon/5.svg' %}" alt="">
                 </div>
-                <span>Manage Staff</span>
+                <span>Supplier</span>
             </a>
+            <ul>
+                <li><a href="{% url 'create-supplier' %}">Add</a></li>
+                <li><a href="{% url 'supplier-list' %}">View</a></li>
+
+            </ul>
         </li>
          <li class="">
-            <a href="{% url 'admin_home' %}" aria-expanded="false">
+            <a class="has-arrow" href="#" aria-expanded="false">
                 <div class="icon_menu">
                     <img src="{% static 'img/menu-icon/5.svg' %}" alt="">
                 </div>
-                <span>Manage Course</span>
+                <span>Buyer</span>
             </a>
-        </li>
-         <li class="">
-            <a href="{% url 'admin_home' %}" aria-expanded="false">
-                <div class="icon_menu">
-                    <img src="{% static 'img/menu-icon/5.svg' %}" alt="">
-                </div>
-                <span>Manage Session</span>
-            </a>
-        </li>
-         <li class="">
-            <a href="{% url 'admin_home' %}" aria-expanded="false">
-                <div class="icon_menu">
-                    <img src="{% static 'img/menu-icon/5.svg' %}" alt="">
-                </div>
-                <span>Manage Student</span>
-            </a>
+            <ul>
+                <li><a href="{% url 'create-buyer' %}">Add</a></li>
+                <li><a href="{% url 'buyer-list' %}">View</a></li>
+
+            </ul>
         </li>
           <li class="">
-            <a href="{% url 'admin_home' %}" aria-expanded="false">
+            <a class="has-arrow" href="#" aria-expanded="false">
                 <div class="icon_menu">
                     <img src="{% static 'img/menu-icon/5.svg' %}" alt="">
                 </div>
-                <span>Manage Subject</span>
+                <span>Season</span>
             </a>
+            <ul>
+                <li><a href="{% url 'create-season' %}">Add</a></li>
+                <li><a href="{% url 'season-list' %}">View</a></li>
+
+            </ul>
         </li>
+          <li class="">
+            <a class="has-arrow" href="#" aria-expanded="false">
+                <div class="icon_menu">
+                    <img src="{% static 'img/menu-icon/5.svg' %}" alt="">
+                </div>
+                <span>Drop</span>
+            </a>
+            <ul>
+                <li><a href="{% url 'create-drop' %}">Add</a></li>
+                <li><a href="{% url 'drop-list' %}">View</a></li>
 
+            </ul>
+        </li>
+          <li class="">
+            <a class="has-arrow" href="#" aria-expanded="false">
+                <div class="icon_menu">
+                    <img src="{% static 'img/menu-icon/5.svg' %}" alt="">
+                </div>
+                <span>Product</span>
+            </a>
+            <ul>
+                <li><a href="{% url 'create-product' %}">Add</a></li>
+                <li><a href="{% url 'product-list' %}">View</a></li>
 
+            </ul>
+        </li>
+          <li class="">
+            <a class="has-arrow" href="#" aria-expanded="false">
+                <div class="icon_menu">
+                    <img src="{% static 'img/menu-icon/5.svg' %}" alt="">
+                </div>
+                <span>Order</span>
+            </a>
+            <ul>
+                <li><a href="{% url 'create-order' %}">Add</a></li>
+                <li><a href="{% url 'order-list' %}">View</a></li>
+
+            </ul>
+        </li>
+          <li class="">
+            <a class="has-arrow" href="#" aria-expanded="false">
+                <div class="icon_menu">
+                    <img src="{% static 'img/menu-icon/5.svg' %}" alt="">
+                </div>
+                <span>Delivery</span>
+            </a>
+            <ul>
+                <li><a href="{% url 'create-delivery' %}">Add</a></li>
+                <li><a href="{% url 'delivery-list' %}">View</a></li>
+
+            </ul>
+        </li>
+        
 
 
     </ul>
