--- a/templates/base/base_template.html
+++ b/templates/base/base_template.html
@@ -8,7 +8,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
-    <title>Marketing</title>
+     <title>{% block title %}{% endblock title %}</title>
 
     <link rel="icon" href="img/logo.png" type="image/png">
     {% include 'base/css.html' %}
